Fix z-index of back button

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -184,6 +184,7 @@ canvas {
     left: 0;
     border: 0;
     margin-top: 0;
+    z-index: 10;
 }
 
 #store-screen button.back.top:active {
